@@ -18,6 +18,7 @@
  * limitations under the License.                                          *
  ***************************************************************************/
 
+// Note: keep aligned with the copy in scene.h
 typedef enum {
 	// Mandatory setting: one or the other must be used
 	EYE_RAY = 1,
@@ -28,9 +29,12 @@ typedef enum {
 	// For the very first eye ray
 	CAMERA_RAY = 8,
 	// For rays used for direct light sampling
-	SHADOW_RAY = 16
+	SHADOW_RAY = 16,
+	// For rays used for indirect light sampling
+	INDIRECT_RAY = 32
 } SceneRayTypeType;
 
+// Note: keep aligned with the copy in scene.h
 typedef int SceneRayType;
 
 typedef struct {
