@@ -60,6 +60,7 @@
 ''Beta1 released''
 
 * Fixed a bug when using RTPATHOCL with multiple CUDA devices
+* Fixed a bug when using shadow transparency (both for Path and BiDir)
 
 Note: due to Glossycoating updated support for bump mapping on GPUs, some old scene using this kind of material/bump map combination may require some fix.
 
